--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -50,7 +50,7 @@ const primaryCategory = getPrimaryCategory(post);
 		</header>
 
 		<div class="toc-mobile">
-			<Toc headings={headings} variant="drawer" />
+			<Toc headings={headings} variant="floating" />
 		</div>
 
 		<div class="article-body">
@@ -132,18 +132,8 @@ const primaryCategory = getPrimaryCategory(post);
 	}
 
 	@media (max-width: 980px) {
-		.article {
-			display: block;
-		}
-		.article-head {
-			margin-bottom: 14px;
-		}
 		.toc-mobile {
 			display: block;
-			position: sticky;
-			top: var(--site-header-height, 72px);
-			z-index: 90;
-			margin-bottom: 14px;
 		}
 		.article-body {
 			grid-template-columns: 1fr;
@@ -154,4 +144,3 @@ const primaryCategory = getPrimaryCategory(post);
 	}
 
 </style>
-
